change img path for publish

--- a/src/pages/messenger/messenger.hbs
+++ b/src/pages/messenger/messenger.hbs
@@ -11,9 +11,9 @@
     </aside>
     <main class="messenger_main conversation">
         <div class="conversation_contact ">
-            <img src="./src/assets/images/ava3.jpeg" alt="" class="conversation_avatar avatar">
+            <img src="./assets/images/ava3.jpeg" alt="" class="conversation_avatar avatar">
             Vadim
-            <img src="./src/assets/icons/add-info.svg"/ class="conversation_add-info svg">
+            <img src="./assets/icons/add-info.svg"/ class="conversation_add-info svg">
         </div>
 
 
@@ -25,7 +25,7 @@
 question: if you could be any character from Futurama who would you pick?
 For me, I'd totally choose Fry. I mean, waking up in the future and discovering all the crazy stuff that’s happened, plus all the wild adventures with Bender and Leela? That’d be epic! Plus, Fry’s got that laid-back vibe and gets to experience the future firsthand. 🍕🚀"
             }}
-            {{> Message type="image" direction="incoming"  time="11:36" text="./src/assets/images/message.jpg" }}
+            {{> Message type="image" direction="incoming"  time="11:36" text="./assets/images/message.jpg" }}
             {{> Message type="text" direction="outgoing"  time="12:00" text="Are you nuts?? What Futurama?!?! I'm an X-Men fan" }}
         </div>
 
@@ -33,7 +33,7 @@ For me, I'd totally choose Fry. I mean, waking up in the future and discovering 
 
 
         <div class="conversation_bottom bottom">
-            <img class="bottom_clip svg" src="./src/assets/icons/clip.svg"/ >
+            <img class="bottom_clip svg" src="./assets/icons/clip.svg"/ >
             <div class="bottom_input">{{> Input type="message"}}</div>
             <div class="bottom_send">{{> Button text="" type="secondary" modificator="arrow-right"}}</div>
         </div>
