fix image paths

--- a/src/pages/messenger/messenger.hbs
+++ b/src/pages/messenger/messenger.hbs
@@ -11,9 +11,9 @@
     </aside>
     <main class="messenger_main conversation">
         <div class="conversation_contact ">
-            <img src="../../assets/images/ava3.jpeg" alt="" class="conversation_avatar avatar">
+            <img src="./src/assets/images/ava3.jpeg" alt="" class="conversation_avatar avatar">
             Vadim
-            <img src="../../assets/icons/add-info.svg"/ class="conversation_add-info svg">
+            <img src="./src/assets/icons/add-info.svg"/ class="conversation_add-info svg">
         </div>
 
 
