code review change

--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -1,9 +1,9 @@
 <button class="button button_{{type}} button_{{type}}_{{modificator}}">
     {{#if (eq modificator 'arrow-right')}}
-        <img class="svg" src="./assets/icons/arrow-right.svg">
+        <img class="svg" src="./assets/icons/arrow-right.svg" alt="arror right">
     {{/if}}
     {{#if (eq modificator 'arrow-left')}}
-        <img class="svg" src="./assets/icons/arrow-left.svg">
+        <img class="svg" src="./assets/icons/arrow-left.svg" alt="arror left">
     {{/if}}
     {{text}}
 
