--- a/src/components/cover-screen/cover-screen.hbs
+++ b/src/components/cover-screen/cover-screen.hbs
@@ -1,5 +1,5 @@
 
-<img class="cover-screen_image" src="./assets/images/background.jpg">
+<img class="cover-screen_image" src="./assets/images/background.jpg" alt="">
 <div class="cover-screen">
     
     <div class="cover-screen_content">
@@ -12,4 +12,3 @@
     </div>
     
 </div>
-
