--- a/src/pages/messenger/messenger.hbs
+++ b/src/pages/messenger/messenger.hbs
@@ -13,7 +13,7 @@
         <div class="conversation_contact ">
             <img src="./assets/images/ava3.jpeg" alt="" class="conversation_avatar avatar">
             Vadim
-            <img src="./assets/icons/add-info.svg"/ class="conversation_add-info svg">
+            <img src="./assets/icons/add-info.svg"/ alt="additional information" class="conversation_add-info svg">
         </div>
 
 
@@ -33,7 +33,7 @@ For me, I'd totally choose Fry. I mean, waking up in the future and discovering 
 
 
         <div class="conversation_bottom bottom">
-            <img class="bottom_clip svg" src="./assets/icons/clip.svg"/ >
+            <img class="bottom_clip svg" alt="clip" src="./assets/icons/clip.svg"/ >
             <div class="bottom_input">{{> Input type="message"}}</div>
             <div class="bottom_send">{{> Button text="" type="secondary" modificator="arrow-right"}}</div>
         </div>
