--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -3,7 +3,7 @@
         {{> Button type="secondary" modificator="arrow-left"}}
     </aside>
     <main class="profile_main">
-        <img class="profile_avatar avatar" alt="" src="./assets/images/profile.jpg"></img>
+        <img class="profile_avatar avatar" alt="my avatar" src="./assets/images/profile.jpg"></img>
         <form class="profile_form">
             {{> Input type="email" label="email" modificator="wide"}}
             {{> Input type="login" label="login" modificator="wide"}}
